--- a/css/hide-tags.css
+++ b/css/hide-tags.css
@@ -1,4 +1,4 @@
 /* hide "tags" */
-a[aria-label="nui.mainmenu.label.tags"] {display:none !important}
-button[aria-label="Tags"] {display:none}
-div.full-view-section#tags {display: none}
+a[aria-label="nui.mainmenu.label.tags"] {display: none !important;}
+button[aria-label="Tags"] {display: none;}
+div.full-view-section#tags {display: none;}
