Hide user group from my account page

--- a/css/my-account.css
+++ b/css/my-account.css
@@ -9,3 +9,8 @@ prm-account-links md-icon {
   min-width: 15px;
   margin-left: .2em;
 }
+
+/* hide user group */
+span[translate='nui.details.patronstatus.group'] {
+  display: none;
+}
