Fix "haven't found" margins

--- a/css/search-result-list.css
+++ b/css/search-result-list.css
@@ -2,3 +2,8 @@
 prm-search-result-list .list-spacer {
   min-height: initial;
 }
+
+prm-search-result-list-after md-card {
+  margin-right: 0;
+  margin-left: 0;
+}
