Update blogger notifications
- increase timeout to 20 seconds
- add a dismiss button
- remember dismissal for 1 day (via cookie)

--- a/css/blogger-notification.css
+++ b/css/blogger-notification.css
@@ -1,6 +1,6 @@
 md-toast.blogger-notification {
-  background-color: #FFCC33;
-	font-size: 1.5em;
+  background-color: #ffcc33;
+	font-size: 1.25em;
 	position: relative;
 }
 md-toast.blogger-notification .md-toast-text {
@@ -11,6 +11,6 @@ md-toast.blogger-notification .md-button {
 	min-height: auto;
 	line-height: inherit;
 	font-size: inherit;
-	color: #7A0019;
+	color: #7a0019;
 }
 
