Fix alma iframe background position

--- a/css/alma-iframe.css
+++ b/css/alma-iframe.css
@@ -1,5 +1,5 @@
 prm-alma-mashup iframe {
   background-image: url("../img/diamonds.gif");
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: center top;
 }
