--- a/css/search-result-list.css
+++ b/css/search-result-list.css
@@ -13,7 +13,7 @@ md-dialog.qpoint-chat {
 md-dialog-content.qpoint-chat {
   width: 340px;
   height: 300px;
-  margin-right: -16px;
+  /*margin-right: -16px;*/
 }
 md-dialog-content.qpoint-chat iframe {
   border: none;
