--- a/css/facets.css
+++ b/css/facets.css
@@ -14,9 +14,13 @@ prm-facet-exact .md-chips .md-chip .md-chip-content strong {
 }
 prm-facet-exact .section-content .md-chips .md-chip .md-chip-remove-container {
   height: 28px; 
+  align-items: center;
+  align-self: center;
+  top: -5px;
 }
 prm-facet-exact .section-content .md-chips .md-chip strong+span {
   margin-left: auto;
+  align-self: center;
 }
 
 prm-facet .sidebar-inner-wrapper {
