Fix alt text on clickable logo

--- a/js/components/search/topbar/logo/prm-logo-after.html
+++ b/js/components/search/topbar/logo/prm-logo-after.html
@@ -1,6 +1,6 @@
 <div class="product-logo product-logo-local" layout="row" layout-align="start center" layout-fill id="banner" tabindex="0" role="banner">
   <a ng-href="{{$ctrl.targetUrl}}" target="_top">
-    <img class="logo-image" alt="{{::('nui.header.LogoAlt' | translate)}}" ng-src="{{$ctrl.iconLink}}"/>
+    <img class="logo-image" alt="Library homepage" ng-src="{{$ctrl.iconLink}}"/>
   </a>
   <div ng-if="$ctrl.isTestEnvironment" style="position:absolute; top:44px; left:17px; color:#f5be23;"><b>Test Environment</b></div>
 </div>
