Update ILL template
Per 2018-06-13 meeting with ILL staff and various web content
owners, add "digital delivery" to the ILL section.

--- a/js/components/account/overview/custom-tiles/ill/ill.html
+++ b/js/components/account/overview/custom-tiles/ill/ill.html
@@ -2,15 +2,15 @@
   <div class="tile-content layout-column" layout="column">
     <div class="tile-header layout-column" layout="column">
       <div layout="row" layout-align="space-between" class="layout-align-space-between-stretch layout-row">
-        <h2 class="light-text">
-          <span>Interlibrary Loan</span>
+        <h2 class="light-text"
+          <span>Interlibrary Loan &amp; <br hide show-gt-xs>Digital Delivery</span>
         </h2>
       </div>
     </div>
     <div layout="column" layout-align="center start">
       <md-button class="button-link md-primoExplore-theme" ng-href="{{$ctrl.illAccountLink}}" target="_blank">
         My ILL Account
-        <md-tooltip>Sign in to your interlibrary loan account</md-tooltip>
+        <md-tooltip>Sign in to your interlibrary loan and digital delivery account</md-tooltip>
         <prm-icon external-link="" icon-type="svg" svg-icon-set="primo-ui" icon-definition="open-in-new"></prm-icon>
       </md-button>
     </div>
