Rename courses tile

--- a/js/components/account/overview/custom-tiles/courses/courses.html
+++ b/js/components/account/overview/custom-tiles/courses/courses.html
@@ -4,7 +4,7 @@
       <div class="tile-header layout-column" layout="column">
         <div layout="row" layout-align="space-between" class="layout-align-space-between-stretch layout-row">
           <h2 class="light-text">
-            <span>Course Guides</span>
+            <span>Library Course Pages</span>
           </h2>
         </div>
       </div>
