Change loans/requests title style
Style the titles so that they do not appear to be clickable.
This is a (weak) workaround for a bug in the August release.

--- a/css/top-bar.css
+++ b/css/top-bar.css
@@ -2,6 +2,7 @@ prm-topbar a.md-button.button-over-dark {
   color: hsla(0,0%,100%,.85);
 }
 
-prm-user-area .user-menu-button .user-name {
+prm-user-area .user-menu-button .user-name,
+prm-user-area-expandable .user-button span {
   color: #f5be23;
 }
