Change peer reviewed icon color
Color sticks out too much and makes the icon seem overly important.
Use the same dark gray that's used for other availability icons.

--- a/css/brief-result-container.css
+++ b/css/brief-result-container.css
@@ -1,5 +1,5 @@
 prm-icon.peer-reviewed-mark-icon {
-  color: #7a0019 !important;
+  color: rgba(58,58,58,.8) !important;
 }
 
 prm-search-result-availability-line [availability-type] {
