Hide course indicator
This was added in the August 2019 release. Its value is
questionable. Will revisit with the Primo management group...

--- a/css/brief-result-container.css
+++ b/css/brief-result-container.css
@@ -5,3 +5,7 @@ prm-icon.peer-reviewed-mark-icon {
 prm-search-result-availability-line [availability-type] {
   color: rgba(58,58,58,.8);
 }
+
+div.course-info-mark {
+  display: none;
+}
