Hide citation trail icons
Remove the citation trail icons in the brief results page.
Recommended by D2A on 2019-08-21.

--- a/css/brief-result-container.css
+++ b/css/brief-result-container.css
@@ -9,3 +9,7 @@ prm-search-result-availability-line [availability-type] {
 div.course-info-mark {
   display: none;
 }
+
+prm-citation-trails-indication-container {
+  display: none;
+}
