Consolidate facet styles

--- a/scss/_facets.scss
+++ b/scss/_facets.scss
@@ -1,3 +1,35 @@
+@import "partials/variables";
+
+prm-facet-exact, prm-facet-range {
+  & > div {
+    background-color: #fff;
+  }
+
+  div.section-content {
+    padding-top: .5em;
+    padding-bottom: .5em;
+
+    button.button-exclude::before {
+      background-color: transparent !important;
+    }
+  }
+
+  & > button.section-title {
+    background-color: #dbdbdb;
+    margin-bottom: 0;
+    border-radius: 0;
+    box-shadow: 1px;
+
+    & > div {
+      justify-content: space-between;
+    }
+  }
+
+  div.md-chips , div.expand-section-button {
+    padding-left: 1em;
+  }
+}
+
 /* results personalization */
 .prm-personalization, 
 prm-search-result-list prm-personalize-results-button .md-button md-switch.md-checked .md-label, 
@@ -7,7 +39,7 @@ prm-search-result-list prm-personalize-results-button .md-button md-switch._md-c
 .sidebar .personalization-section .section-title-header,
 .sidebar .personalization-section .sidebar-list,
 .sidebar .personalization-section md-checkbox {
-  color: #800000; }
+  color: $primary; }
 .prm-personalization-bg, 
 prm-search-result-list prm-personalize-results-button .md-button md-switch.md-checked .md-bar, 
 prm-search-result-list prm-personalize-results-button .md-button md-switch.md-checked ._md-bar, 
@@ -29,41 +61,3 @@ prm-search-result-list prm-personalize-results-button .md-button.toggled.button-
 .section-content .md-chips .md-chip .md-chip-content {
   color: #3a3a3a;
 }
-
-/*
-
-prm-facet-exact .section-content .md-chips .md-chip strong+span {
-  flex-basis: 100%;
-  margin-left: .25em;
-}
-
-.section-content .md-chips .md-chip .facet-title {
-  flex-basis: 0; 
-  flex-grow: 2;
-  margin-right: 0;
-}
-
-prm-facet-exact .section-content .md-chips .md-chip .md-chip-content {
-  flex-wrap: wrap;
-  padding-left: 0;
-  flex-direction: row-reverse;
-  position: initial; 
-  left: 0;
-}
-
-.multiselect-facet-group .md-chip .md-chip-content md-checkbox {
-  align-self: flex-start;
-  left: 4px;
-}
-
-
-.multiselect-facet-group .md-chip .md-chip-remove-container {
-  position: initial; 
-  left: 0;
-}
-
-
-.available-facets .section-content .md-chips .md-chip .md-chip-content:focus+.md-chip-remove-container .md-button, .available-facets .section-content .md-chips .md-chip.md-chip-remove-container .md-button:focus .md-button, .available-facets .section-content .md-chips .md-chip.md-chip-remove-container:focus .md-button, .available-facets .section-content .md-chips .md-chip:focus .md-button, .available-facets .section-content .md-chips .md-chip:hover .md-button {
-  top: -5px;
-}
-*/
