--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,5 @@
 @import "partials/variables";
+@import "facets";
 
 $darkBlue: #404d5b;
 
@@ -39,34 +40,4 @@ prm-icon:first-child {
 
 div._md-list-item-inner {
   background-color: #fff;
-}
-
-prm-facet-exact, prm-facet-range {
-  & > div {
-    background-color: #fff;
-  }
-
-  div.section-content {
-    padding-top: .5em;
-    padding-bottom: .5em;
-
-    button.button-exclude::before {
-      background-color: transparent !important;
-    }
-  }
-
-  & > button.section-title {
-    background-color: #dbdbdb;
-    margin-bottom: 0;
-    border-radius: 0;
-    box-shadow: 1px;
-
-    & > div {
-      justify-content: space-between;
-    }
-  }
-
-  div.md-chips , div.expand-section-button {
-    padding-left: 1em;
-  }
 }
