Add custom sass variables file

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,4 @@
-@import "partials/variables";
+@import "variables";
 @import "facets";
 
 $darkBlue: #404d5b;
@@ -15,8 +15,7 @@ prm-user-area .user-menu-button .user-name, prm-user-area-expandable .user-butto
 .prm-alert-bg, .bar.alert-bar, .classic-input .search-scope {
   background-color: #ffd75f;
   button {
-    color: #7a0019;
-    //color: inherit;
+    color: $primary;
 
     &:hover:not([disabled]) {
       color: inherit;
