Fix bad variable name

--- a/scss/_facets.scss
+++ b/scss/_facets.scss
@@ -39,7 +39,7 @@ prm-search-result-list prm-personalize-results-button .md-button md-switch._md-c
 .sidebar .personalization-section .section-title-header,
 .sidebar .personalization-section .sidebar-list,
 .sidebar .personalization-section md-checkbox {
-  color: $primary; }
+  color: $maroon; }
 .prm-personalization-bg, 
 prm-search-result-list prm-personalize-results-button .md-button md-switch.md-checked .md-bar, 
 prm-search-result-list prm-personalize-results-button .md-button md-switch.md-checked ._md-bar, 
