--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,7 +15,7 @@ prm-user-area .user-menu-button .user-name, prm-user-area-expandable .user-butto
 .prm-alert-bg, .bar.alert-bar, .classic-input .search-scope {
   background-color: #ffd75f;
   button {
-    color: $primary;
+    color: $maroon;
 
     &:hover:not([disabled]) {
       color: inherit;
