--- a/scss/components/search/_facets.scss
+++ b/scss/components/search/_facets.scss
@@ -1,4 +1,5 @@
-prm-facet-exact, prm-facet-range {
+prm-facet-exact, 
+prm-facet-range {
   & > div {
     background-color: #fff;
   }
@@ -23,7 +24,9 @@ prm-facet-exact, prm-facet-range {
     }
   }
 
-  div.md-chips , div.expand-section-button {
+  div.md-chips, 
+  div.expand-section-button,
+  .md-chip > .md-range-content {
     padding-left: 1em;
   }
 }
