Move md-chip-content style to color-theme.scss

--- a/scss/_color-theme.scss
+++ b/scss/_color-theme.scss
@@ -20,3 +20,7 @@
 md-backdrop.md-opaque {
   background-color: #000;
 }
+
+.section-content .md-chips .md-chip .md-chip-content {
+  color: #3a3a3a;
+}
