Consolidate full-view styles

--- a/css/full-view.css
+++ b/css/full-view.css
@@ -13,3 +13,12 @@
 
 .services-index-under { display: none; }
 .full-view-section-content { padding-left: 0 !important; }
+
+prm-alma-mashup iframe {
+  background-image: url("../img/diamonds.gif");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+prm-alma-more-inst {display: none;}
+div.full-view-section#tags {display: none;}
