Use separate gold/light-gold sass variables

--- a/scss/_color-theme.scss
+++ b/scss/_color-theme.scss
@@ -1,8 +1,8 @@
 .prm-alert-bg,
 .bar.alert-bar,
 .classic-input .search-scope {
-  background-color: $gold;
-  border-color: $gold;
+  background-color: $light-gold;
+  border-color: $light-gold;
 
   button {
     color: $maroon;
