--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,7 +9,7 @@
 
 prm-user-area .user-menu-button .user-name, 
 prm-user-area-expandable .user-button span {
-  color: $gold;
+  color: $light-gold;
   font-weight: bold;
 }
 
