--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -1,3 +1,4 @@
 @import "components/search/facets";
 @import "components/search/full-view";
+@import "components/search/search-result";
 @import "components/search/top-bar";
