--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -1,5 +1,7 @@
+@import "components/account";
 @import "components/search/brief-result";
 @import "components/search/facets";
 @import "components/search/full-view";
+@import "components/search/search-bar";
 @import "components/search/search-result";
 @import "components/search/top-bar";
