--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -1,5 +1,6 @@
 @import "components/account";
 @import "components/search/brief-result";
+@import "components/search/browse";
 @import "components/search/facets";
 @import "components/search/full-view";
 @import "components/search/search-bar";
