--- a/scss/components/search/_top-bar.scss
+++ b/scss/components/search/_top-bar.scss
@@ -18,3 +18,9 @@ prm-logo {
     }
   }
 }
+
+prm-user-area .user-menu-button .user-name, 
+prm-user-area-expandable .user-button span {
+  color: $light-gold;
+  font-weight: bold;
+}
