--- a/scss/components/search/_top-bar.scss
+++ b/scss/components/search/_top-bar.scss
@@ -24,3 +24,15 @@ prm-user-area-expandable .user-button span {
   color: $light-gold;
   font-weight: bold;
 }
+
+prm-user-area-expandable {
+  span {
+    font-weight: bold;
+  }
+}
+
+prm-main-menu {
+  .item-content {
+    font-weight: bold;
+  }
+}
