--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -1,7 +1,8 @@
 @import "components/account";
+
 @import "components/search/brief-result";
 @import "components/search/browse";
-@import "components/search/facets";
+@import "components/search/facet";
 @import "components/search/full-view";
 @import "components/search/search-bar";
 @import "components/search/search-result";
