Use normal h2 & h4 weights
Hammering this with `!important` to override the various classes
in the Material Design stylesheets that lighten the headers.

--- a/scss/_theme.scss
+++ b/scss/_theme.scss
@@ -21,6 +21,7 @@ md-backdrop.md-opaque {
   background-color: #000;
 }
 
-h2 {
-  font-weight: 400;
+// override the MD stylesheets and us a normal weight for headers 
+h2, h4 {
+  font-weight: 400 !important;
 }
