Remove reference number from CSL citations

--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -1,5 +1,6 @@
 @import "components/account";
 
+@import "components/search/actions";
 @import "components/search/brief-result";
 @import "components/search/browse";
 @import "components/search/facet";
