Remove prm-logo-after component
This component was not rendering properly in email templates.
Moreover, a custom logo component is no longer necessary because
the banner click targets can be defined in the back office.

--- a/scss/components/search/_top-bar.scss
+++ b/scss/components/search/_top-bar.scss
@@ -7,11 +7,7 @@ prm-search-bookmark-filter #favorites-button:before {background-color: $dark-gol
 button[aria-label="Tags"] {display: none;}
 
 prm-logo { 
-  div.product-logo {
-    display:none;
-  }
-  div.product-logo-local {
-    display: block;
+  #banner {
     a:hover {
       box-shadow: none;
       background-color: transparent;
