Filter out duplicate courses
Fixes #14

--- a/js/components/account/overview/custom-tiles/courses/courses.html
+++ b/js/components/account/overview/custom-tiles/courses/courses.html
@@ -10,7 +10,7 @@
       </div>
       <div layout="column" layout-align="center center">
         <md-list>
-          <md-list-item ng-repeat="course in $ctrl.courses | orderBy:['subject', 'courseNumber']">
+          <md-list-item ng-repeat="course in $ctrl.courses | orderBy:['subject', 'courseNumber'] | uniqByKeys:['subject', 'courseNumber']">
             <a class="" ng-href="https://www.lib.umn.edu/course/{{course.subject}}/{{course.courseNumber}}">
               {{course.subject}} {{course.courseNumber}}
             </a>
