--- a/js/components/account/overview/fines-overview/prm-fines-overview-after.html
+++ b/js/components/account/overview/fines-overview/prm-fines-overview-after.html
@@ -1,4 +1,7 @@
-<section style="padding: 1em; margin-bottom: 1em; background-color: #ffcc33; color: #7a0019;">
+<section
+  style="padding: 1em; margin-bottom: 1em; background-color: #ffcc33; color: #7a0019; display: inline-block;"
+  ng-switch="$ctrl.mentionReturns"
+>
   <h3 style="font-size: 1.5em;">
     <prm-icon
       icon-type="svg"
@@ -7,8 +10,12 @@
     ></prm-icon>
     Notice
   </h3>
-  <p style="font-size: 1.25em;">
-    As we are not able to accept returns, we are extending the due dates for all
-    items and we are not charging fines.
+  <p ng-switch-when="true" style="font-size: 1.25em;">
+    As we are unable to accept returns, we are extending the due dates on all
+    items. We are not assessing fines during the COVID-19 closure.
+  </p>
+  <p ng-switch-default style="font-size: 1.25em;">
+    We are extending the due dates on all items and not assessing fines during
+    the COVID-19 closure.
   </p>
 </section>
