Ignore copyright HathiTrust availability
HT is temporarily making in-copyright material available to UMN
affiliates while our libraries are closed.

--- a/js/components/search/search-result/search-result-availability/prm-search-result-availability-line-after.html
+++ b/js/components/search/search-result/search-result-availability/prm-search-result-availability-line-after.html
@@ -1,1 +1,5 @@
-<hathi-trust-availability hide-online=true></hathi-trust-availability>
+<hathi-trust-availability
+  hide-online="true"
+  ignore-copyright="true"
+  msg="Full Text Available at HathiTrust (log in for access)"
+></hathi-trust-availability>
