Add "auto login" to HT links
  - bump to version 2.5 of the HT plugin
  - add UMN InCommon entity id to HT component

--- a/js/components/search/search-result/search-result-availability/prm-search-result-availability-line-after.html
+++ b/js/components/search/search-result/search-result-availability/prm-search-result-availability-line-after.html
@@ -1,5 +1,5 @@
 <hathi-trust-availability
   hide-online="true"
   ignore-copyright="true"
-  msg="Full Text Available at HathiTrust (log in for access)"
+  entity-id="urn:mace:incommon:umn.edu"
 ></hathi-trust-availability>
