Override pin with custom component
Use a custom PrmIconAfter to dynamically replace the pin icons
with MD star icons. This seems to work with search results, but it
does not work with the pin icon in the top bar. It might be better
to try crating a custom-ui.svg sprite instead.

--- a/scss/components/search/_brief-result.scss
+++ b/scss/components/search/_brief-result.scss
@@ -21,3 +21,11 @@ prm-brief-result-container {
     white-space: pre;
   }
 }
+
+.result-item-actions {
+  .pin-button {
+    md-icon {
+      transform: rotate(0) !important;
+    }
+  }
+}
