Override prm-icon template
In some cases (i.e. in the top bar menu), the pin icon could not
by dynamically change due to a combination of hard-coded
hard-coded propertied and one-time binding. It seem like the
simplest solution is to override the prm-icon template with a
slightly modified prm-icon-after template.

--- a/scss/components/search/_top-bar.scss
+++ b/scss/components/search/_top-bar.scss
@@ -32,3 +32,11 @@ prm-main-menu {
     font-weight: bold;
   }
 }
+
+// don't rotate the overridden "pin" icon
+prm-search-bookmark-filter #favorites-button md-icon {
+  transform: rotate(0) !important;
+} 
+.prm-user-menu-content prm-icon.rotate-25 md-icon {
+  transform: rotate(0) !important;
+}
