--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -1,5 +1,7 @@
 @import "components/account";
 
+@import "components/icon";
+
 @import "components/search/actions";
 @import "components/search/brief-result";
 @import "components/search/browse";
